--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -13,3 +13,16 @@ user.registered=Зарегистрирован
 meal.title=Моя еда
 
 common.select=Выбрать
+meal.create=Новый приём пищи
+meal.dateTime=Дата и время
+meal.description=Описание
+meal.calories=калории
+common.save=Сохранить
+common.cancel=Отменить
+meal.fromDate=От даты
+meal.toDate=До даты
+meal.fromTime=От времени
+meal.toTime=До времени
+meal.filter=Отфильтровать
+common.update=Обновить
+common.delete=Удалить
